Finalize addition of server component as maven module